# pet-project

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  main.py  nginx.conf  prestart.sh  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
api/: main_router.py
api/api_v1/dependencies/: admin.py  auth.py  log_helper.py  stories.py  users.py
api/api_v1/dependencies/auth/: __init__.py  auth.py  internal_functions.py
api/api_v1/dependencies/database/: db_helper.py  redis_helper.py
api/api_v1/exceptions/: http_exceptions.py
api/api_v1/routers/: admin.py  auth.py  stories.py  users.py  v1_router.py
api/api_v1/schemas/: auth_responses.py  story.py  user.py
api/api_v1/utils/: cache.py  database.py  email.py  files.py  jwt_auth.py  security.py
certificates/: private.pem  public.pem
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  story.py  token.py  user.py  user_story_association.py
migrations/versions/: 2025_05_25_0828-70766bcbede2_initial_migration.py  2026_02_02_2013-085ea4d1ce71_change_user_pk_from_email_to_username.py
tests/integration/: conftest.py  test_auth.py  test_endpoints.py
tests/unit/: conftest.py  test_utils.py
